--- a/Sentiment_Analysis_using_NLP.ipynb
+++ b/Sentiment_Analysis_using_NLP.ipynb
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "6983f446",
+   "id": "17cb92d8",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b55d60d",
+   "id": "4cb74e6c",
    "metadata": {},
    "source": [
     "## First, training a word2vec model (with the arguments that we want) on your training sentence. Store it into the `word2vec` variable. "
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16beb314",
+   "id": "aa471354",
    "metadata": {},
    "source": [
     "## Embedding the training and test sentences."
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "741e7929",
+   "id": "728cb113",
    "metadata": {},
    "source": [
     "### It's a good practice to check check the following for `X_train_pad` and `X_test_pad`:\n",
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "498151a1",
+   "id": "056b6f68",
    "metadata": {},
    "source": [
     "## Baseline Model"
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61d29e92",
+   "id": "6413f08f",
    "metadata": {},
    "source": [
     "## The Model"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "a5f127b7",
+   "id": "faf030f2",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e3010ce",
+   "id": "a61fa645",
    "metadata": {},
    "source": [
     "## Trained Word2Vec - Transfer Learning\n"
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9ab042c",
+   "id": "fff793b6",
    "metadata": {},
    "source": [
     "### The accuracy of the above the baseline model, might be quite low. By improving the quality of the embedding we can Improve accuracy of the model."
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8348e0d7",
+   "id": "4fd1e110",
    "metadata": {},
    "source": [
     "### Let's improve the quality of our embedding, instead of just loading a larger corpus, let's benefit from the embedding that others have learned. Because, the quality of an embedding, i.e. the proximity of the words, can be derived from different tasks. This is exactly what transfer learning is."
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4609b0c5",
+   "id": "2d081a35",
    "metadata": {},
    "source": [
     "### Listing all the different models available in the word2vec using gensim api."
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "d31cbfc9",
+   "id": "dc80c38b",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a163c58",
+   "id": "6ad873cd",
    "metadata": {},
    "source": [
     "### There is a significant improvement in the accuracy after Transfer learning."
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50d33acf",
+   "id": "8ba03240",
    "metadata": {},
    "source": [
     "## Comparing Accuracy of Baseline model, The model and Improved model."
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "b2abc930",
+   "id": "ce576ade",
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5834e1bd",
+   "id": "6b5bc6f5",
    "metadata": {},
    "source": [
     "## Predicting the model for new review."
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "af8e31c9",
+   "id": "77ac610c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "0dada498",
+   "id": "926dcd88",
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 127,
    "id": "1949d6e3",
    "metadata": {},
    "outputs": [],
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 128,
    "id": "9de36bef",
    "metadata": {},
    "outputs": [
@@ -802,8 +802,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 2c14a02] Sentiment Analysis using NLP\r\n",
-      " 1 file changed, 39 insertions(+), 40 deletions(-)\r\n"
+      "On branch master\r\n",
+      "Your branch is ahead of 'origin/master' by 1 commit.\r\n",
+      "  (use \"git push\" to publish your local commits)\r\n",
+      "\r\n",
+      "Untracked files:\r\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\r\n",
+      "\t\u001b[31m.DS_Store\u001b[m\r\n",
+      "\t\u001b[31mSentiment_Analysis_using_NLP-Copy1.ipynb\u001b[m\r\n",
+      "\t\u001b[31mmy_model.h5\u001b[m\r\n",
+      "\t\u001b[31mmy_model/\u001b[m\r\n",
+      "\t\u001b[31mmy_model_weights.h5\u001b[m\r\n",
+      "\t\u001b[31msaved_model.pb\u001b[m\r\n",
+      "\t\u001b[31mword2vec.model\u001b[m\r\n",
+      "\t\u001b[31m~/\u001b[m\r\n",
+      "\r\n",
+      "nothing added to commit but untracked files present (use \"git add\" to track)\r\n"
      ]
     }
    ],
@@ -813,26 +827,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "3d53dd7b",
+   "execution_count": 129,
+   "id": "eb194e38",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enumerating objects: 5, done.\n",
-      "Counting objects: 100% (5/5), done.\n",
-      "Delta compression using up to 8 threads\n",
-      "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (3/3), 998 bytes | 998.00 KiB/s, done.\n",
-      "Total 3 (delta 2), reused 0 (delta 0), pack-reused 0\n",
-      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
-      "remote: This repository moved. Please use the new location:\u001b[K\n",
-      "remote:   git@github.com:pavankumarhm/Sentiment-Analysis-for-MYM-Intern-Assesment.git\u001b[K\n",
-      "To github.com:pavankumarhm/Sentiment-Analysis-Assesment.git\n",
-      "   3f85d13..2c14a02  master -> master\n",
-      "branch 'master' set up to track 'origin/master'.\n"
+      "To github.com:pavankumarhm/Sentiment-Analysis-Assesment.git\r\n",
+      " \u001b[31m! [rejected]       \u001b[m master -> master (fetch first)\r\n",
+      "\u001b[31merror: failed to push some refs to 'github.com:pavankumarhm/Sentiment-Analysis-Assesment.git'\r\n",
+      "\u001b[m\u001b[33mhint: Updates were rejected because the remote contains work that you do\u001b[m\r\n",
+      "\u001b[33mhint: not have locally. This is usually caused by another repository pushing\u001b[m\r\n",
+      "\u001b[33mhint: to the same ref. You may want to first integrate the remote changes\u001b[m\r\n",
+      "\u001b[33mhint: (e.g., 'git pull ...') before pushing again.\u001b[m\r\n",
+      "\u001b[33mhint: See the 'Note about fast-forwards' in 'git push --help' for details.\u001b[m\r\n"
      ]
     }
    ],
@@ -843,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3de282b",
+   "id": "494093df",
    "metadata": {},
    "outputs": [],
    "source": []
