--- a/Sentiment_Analysis_using_NLP.ipynb
+++ b/Sentiment_Analysis_using_NLP.ipynb
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "17cb92d8",
+   "id": "90ba3ed3",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cb74e6c",
+   "id": "460e5d37",
    "metadata": {},
    "source": [
     "## First, training a word2vec model (with the arguments that we want) on your training sentence. Store it into the `word2vec` variable. "
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa471354",
+   "id": "762f797f",
    "metadata": {},
    "source": [
     "## Embedding the training and test sentences."
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "728cb113",
+   "id": "0a82bec7",
    "metadata": {},
    "source": [
     "### It's a good practice to check check the following for `X_train_pad` and `X_test_pad`:\n",
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "056b6f68",
+   "id": "c6bf1dec",
    "metadata": {},
    "source": [
     "## Baseline Model"
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6413f08f",
+   "id": "446cc5a0",
    "metadata": {},
    "source": [
     "## The Model"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "faf030f2",
+   "id": "b67fd319",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a61fa645",
+   "id": "4046d777",
    "metadata": {},
    "source": [
     "## Trained Word2Vec - Transfer Learning\n"
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fff793b6",
+   "id": "a7f60915",
    "metadata": {},
    "source": [
     "### The accuracy of the above the baseline model, might be quite low. By improving the quality of the embedding we can Improve accuracy of the model."
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fd1e110",
+   "id": "f225b0bf",
    "metadata": {},
    "source": [
     "### Let's improve the quality of our embedding, instead of just loading a larger corpus, let's benefit from the embedding that others have learned. Because, the quality of an embedding, i.e. the proximity of the words, can be derived from different tasks. This is exactly what transfer learning is."
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d081a35",
+   "id": "3833ecc5",
    "metadata": {},
    "source": [
     "### Listing all the different models available in the word2vec using gensim api."
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "dc80c38b",
+   "id": "51ebf8d2",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ad873cd",
+   "id": "2751d5f6",
    "metadata": {},
    "source": [
     "### There is a significant improvement in the accuracy after Transfer learning."
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ba03240",
+   "id": "3870ff99",
    "metadata": {},
    "source": [
     "## Comparing Accuracy of Baseline model, The model and Improved model."
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "ce576ade",
+   "id": "56556ca5",
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b5bc6f5",
+   "id": "2e6932bf",
    "metadata": {},
    "source": [
     "## Predicting the model for new review."
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "77ac610c",
+   "id": "f3056924",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "926dcd88",
+   "id": "509c15ae",
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 133,
    "id": "1949d6e3",
    "metadata": {},
    "outputs": [],
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 134,
    "id": "9de36bef",
    "metadata": {},
    "outputs": [
@@ -803,7 +803,7 @@
      "output_type": "stream",
      "text": [
       "On branch master\r\n",
-      "Your branch is ahead of 'origin/master' by 1 commit.\r\n",
+      "Your branch is ahead of 'origin/master' by 2 commits.\r\n",
       "  (use \"git push\" to publish your local commits)\r\n",
       "\r\n",
       "Untracked files:\r\n",
@@ -827,8 +827,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "id": "eb194e38",
+   "execution_count": 137,
+   "id": "d6381dd7",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "494093df",
+   "id": "3d7f21c0",
    "metadata": {},
    "outputs": [],
    "source": []
