--- a/Sentiment_Analysis_using_NLP.ipynb
+++ b/Sentiment_Analysis_using_NLP.ipynb
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "90ba3ed3",
+   "id": "d88d92b9",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "460e5d37",
+   "id": "f561e9a0",
    "metadata": {},
    "source": [
     "## First, training a word2vec model (with the arguments that we want) on your training sentence. Store it into the `word2vec` variable. "
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "762f797f",
+   "id": "b633a171",
    "metadata": {},
    "source": [
     "## Embedding the training and test sentences."
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a82bec7",
+   "id": "290583a6",
    "metadata": {},
    "source": [
     "### It's a good practice to check check the following for `X_train_pad` and `X_test_pad`:\n",
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6bf1dec",
+   "id": "4bf6b14b",
    "metadata": {},
    "source": [
     "## Baseline Model"
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "446cc5a0",
+   "id": "ca363914",
    "metadata": {},
    "source": [
     "## The Model"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "b67fd319",
+   "id": "4c762a37",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4046d777",
+   "id": "b93555d3",
    "metadata": {},
    "source": [
     "## Trained Word2Vec - Transfer Learning\n"
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7f60915",
+   "id": "427ae5ca",
    "metadata": {},
    "source": [
     "### The accuracy of the above the baseline model, might be quite low. By improving the quality of the embedding we can Improve accuracy of the model."
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f225b0bf",
+   "id": "8ebc1eb8",
    "metadata": {},
    "source": [
     "### Let's improve the quality of our embedding, instead of just loading a larger corpus, let's benefit from the embedding that others have learned. Because, the quality of an embedding, i.e. the proximity of the words, can be derived from different tasks. This is exactly what transfer learning is."
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3833ecc5",
+   "id": "d5ab2de5",
    "metadata": {},
    "source": [
     "### Listing all the different models available in the word2vec using gensim api."
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "51ebf8d2",
+   "id": "9c344fc0",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2751d5f6",
+   "id": "ee3893f0",
    "metadata": {},
    "source": [
     "### There is a significant improvement in the accuracy after Transfer learning."
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3870ff99",
+   "id": "ec279c0d",
    "metadata": {},
    "source": [
     "## Comparing Accuracy of Baseline model, The model and Improved model."
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "56556ca5",
+   "id": "f51eb1ad",
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e6932bf",
+   "id": "1315fb78",
    "metadata": {},
    "source": [
     "## Predicting the model for new review."
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "f3056924",
+   "id": "6586edc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,21 +760,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "509c15ae",
+   "execution_count": 141,
+   "id": "fc098a62",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 17ms/step\n",
-      "Negative review\n"
+      "1/1 [==============================] - 0s 70ms/step\n",
+      "Positive review\n"
      ]
     }
    ],
    "source": [
-    "review = \"The movie is bad.\"\n",
+    "review = \"The movie is good.\"\n",
     "sentiment = predict_sentiment(review)\n",
     "if sentiment > 0.5:\n",
     "    print(\"Positive review\")\n",
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 138,
    "id": "1949d6e3",
    "metadata": {},
    "outputs": [],
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 139,
    "id": "9de36bef",
    "metadata": {},
    "outputs": [
@@ -802,22 +802,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On branch master\r\n",
-      "Your branch is ahead of 'origin/master' by 2 commits.\r\n",
-      "  (use \"git push\" to publish your local commits)\r\n",
-      "\r\n",
-      "Untracked files:\r\n",
-      "  (use \"git add <file>...\" to include in what will be committed)\r\n",
-      "\t\u001b[31m.DS_Store\u001b[m\r\n",
-      "\t\u001b[31mSentiment_Analysis_using_NLP-Copy1.ipynb\u001b[m\r\n",
-      "\t\u001b[31mmy_model.h5\u001b[m\r\n",
-      "\t\u001b[31mmy_model/\u001b[m\r\n",
-      "\t\u001b[31mmy_model_weights.h5\u001b[m\r\n",
-      "\t\u001b[31msaved_model.pb\u001b[m\r\n",
-      "\t\u001b[31mword2vec.model\u001b[m\r\n",
-      "\t\u001b[31m~/\u001b[m\r\n",
-      "\r\n",
-      "nothing added to commit but untracked files present (use \"git add\" to track)\r\n"
+      "[master 161d352] Sentiment Analysis using NLP\r\n",
+      " 1 file changed, 24 insertions(+), 24 deletions(-)\r\n"
      ]
     }
    ],
@@ -827,22 +813,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "id": "d6381dd7",
+   "execution_count": 140,
+   "id": "db054a16",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To github.com:pavankumarhm/Sentiment-Analysis-Assesment.git\r\n",
-      " \u001b[31m! [rejected]       \u001b[m master -> master (fetch first)\r\n",
-      "\u001b[31merror: failed to push some refs to 'github.com:pavankumarhm/Sentiment-Analysis-Assesment.git'\r\n",
-      "\u001b[m\u001b[33mhint: Updates were rejected because the remote contains work that you do\u001b[m\r\n",
-      "\u001b[33mhint: not have locally. This is usually caused by another repository pushing\u001b[m\r\n",
-      "\u001b[33mhint: to the same ref. You may want to first integrate the remote changes\u001b[m\r\n",
-      "\u001b[33mhint: (e.g., 'git pull ...') before pushing again.\u001b[m\r\n",
-      "\u001b[33mhint: See the 'Note about fast-forwards' in 'git push --help' for details.\u001b[m\r\n"
+      "Enumerating objects: 47, done.\n",
+      "Counting objects: 100% (47/47), done.\n",
+      "Delta compression using up to 8 threads\n",
+      "Compressing objects: 100% (47/47), done.\n",
+      "Writing objects: 100% (47/47), 294.53 KiB | 5.77 MiB/s, done.\n",
+      "Total 47 (delta 24), reused 4 (delta 0), pack-reused 0\n",
+      "remote: Resolving deltas: 100% (24/24), done.\u001b[K\n",
+      "remote: This repository moved. Please use the new location:\u001b[K\n",
+      "remote:   git@github.com:pavankumarhm/Sentiment-Analysis-for-MYM-Intern-Assesment.git\u001b[K\n",
+      "remote: \n",
+      "remote: Create a pull request for 'master' on GitHub by visiting:\u001b[K\n",
+      "remote:      https://github.com/pavankumarhm/Sentiment-Analysis-for-MYM-Intern-Assesment/pull/new/master\u001b[K\n",
+      "remote: \n",
+      "remote: Heads up! The branch 'master' that you pushed to was renamed to 'main'.\u001b[K\n",
+      "remote: \n",
+      "To github.com:pavankumarhm/Sentiment-Analysis-Assesment.git\n",
+      " * [new branch]      master -> master\n",
+      "branch 'master' set up to track 'origin/master'.\n"
      ]
     }
    ],
@@ -853,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d7f21c0",
+   "id": "5c4856a8",
    "metadata": {},
    "outputs": [],
    "source": []
